--- a/web/three/three_viewer.html
+++ b/web/three/three_viewer.html
@@ -1,33 +1,25 @@
-import 'dart:html' as html;
-import 'dart:ui' as ui;
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <style>
+      html, body { margin:0; width:100%; height:100%; overflow:hidden; background:#fff; }
+      #three-host { position:fixed; inset:0; }
+      canvas { display:block; }
+    </style>
 
-import 'package:flutter/material.dart';
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+        }
+      }
+    </script>
+  </head>
 
-void main() {
-  // Registra um "platform view" do tipo iframe (web-only)
-  // ignore: undefined_prefixed_name
-  ui.platformViewRegistry.registerViewFactory(
-    'three-iframe',
-    (int viewId) => html.IFrameElement()
-      ..src = 'three_viewer.html'
-      ..style.border = 'none'
-      ..style.width = '100%'
-      ..style.height = '100%',
-  );
-
-  runApp(const MyApp());
-}
-
-class MyApp extends StatelessWidget {
-  const MyApp({super.key});
-
-  @override
-  Widget build(BuildContext context) {
-    return MaterialApp(
-      home: Scaffold(
-        appBar: AppBar(title: const Text('E-commerce 3D (demo)')),
-        body: const HtmlElementView(viewType: 'three-iframe'),
-      ),
-    );
-  }
-}
+  <body>
+    <div id="three-host"></div>
+    <script type="module" src="three_viewer.js"></script>
+  </body>
+</html>
